[package]
name = "warp-horizon-client-glium"
version = "0.1.0"
authors = ["Layl <layl@edgeworksgames.com>"]

[dependencies]
cgmath = "0.7"
glium = "0.13"
image = "0.6"

[dependencies.uv-utils]
path = "../../libraries/uv_utils"

[dependencies.warp-horizon]
path = "../../libraries/warp_horizon"

[dependencies.warp-horizon-client]
path = "../../libraries/warp_horizon_client"
